--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Memory</title>
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -116,8 +117,10 @@
             <span class="icon"></span>
           </span>
         </label>
-        <span class="clear"> </span>
       </div>
     </div>
+    <footer>
+
+    </footer>
   </body>
 </html>
