Icons Appear/Disappear

--- a/index.html
+++ b/index.html
@@ -2,122 +2,125 @@
   <head>
     <meta charset="utf-8">
     <title>Memory</title>
-
+    <link href="https://fontastic.s3.amazonaws.com/2GP83PtatM7CuT9kveTHXk/icons.css"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="game">
       <div class="grid">
-        <label class="tile">
-          <input type="checkbox">
+        <label class="tile" id="tile">
+          <input type="checkbox" id="tile">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">a</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">b</span>
+          </span>
+        </label>
+        <label class="tile" id="tile">
+          <input type="checkbox" id="tile">
+          <span class="tile-style">
+            <span class="icon">c</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">d</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">e</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">f</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">g</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">h</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">i</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">j</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">k</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">l</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">m</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">n</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">o</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">p</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">q</span>
           </span>
         </label>
         <label class="tile">
           <input type="checkbox">
           <span class="tile-style">
-            <span class="icon"></span>
+            <span class="icon">r</span>
           </span>
         </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon"></span>
-          </span>
-        </label>
+        <span class="clear"></span>
       </div>
+      <span class="clear"></span>
     </div>
     <footer>
 
