--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Memory</title>
     <link href="https://fontastic.s3.amazonaws.com/2GP83PtatM7CuT9kveTHXk/icons.css"
           rel="stylesheet">
