add hard and welcome page

--- a/index.html
+++ b/index.html
@@ -3,128 +3,19 @@
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Memory</title>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans'
+          rel='stylesheet' type='text/css'>
     <link href="https://fontastic.s3.amazonaws.com/2GP83PtatM7CuT9kveTHXk/icons.css"
           rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-    <div class="game">
-      <div class="grid">
-        <label class="tile" id="tile">
-          <input type="checkbox" id="tile">
-          <span class="tile-style">
-            <span class="icon">a</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">b</span>
-          </span>
-        </label>
-        <label class="tile" id="tile">
-          <input type="checkbox" id="tile">
-          <span class="tile-style">
-            <span class="icon">c</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">d</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">e</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">f</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">g</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">h</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">i</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">j</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">k</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">l</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">m</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">n</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">o</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">p</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">q</span>
-          </span>
-        </label>
-        <label class="tile">
-          <input type="checkbox">
-          <span class="tile-style">
-            <span class="icon">r</span>
-          </span>
-        </label>
-        <span class="clear"></span>
-      </div>
-      <span class="clear"></span>
+  <body class="new-game-body">
+    <div class="welcome-box">
+      <h1 class="menu-header">Mem<span class="header-icon">b</span>ry</h1>
+      <h2 class="new-game-message">New Game</h2>
+      <a class="menu-button" href="easy.html">Easy</a>
+      <a class="menu-button" href="hard.html">Hard</a>
     </div>
-    <footer>
-
-    </footer>
   </body>
 </html>
