add sound and animations

--- a/easy.html
+++ b/easy.html
@@ -137,5 +137,10 @@
     <footer>
 
     </footer>
+    <audio controls preload="auto" autoplay="autostart">
+      <source src="Jeapordy.wav" type="audio/ogg">
+      <source src="Jeapordy.wav" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
   </body>
 </html>
