--- a/hard.html
+++ b/hard.html
@@ -221,5 +221,10 @@
     <footer>
 
     </footer>
+    <audio controls preload="auto" autoplay="autostart">
+      <source src="quintooos - Starwars The Imperial March Darth Vaders Theme - Star Wars - The Empire Strikes Back Original Soundtrack -.mp3" type="audio/ogg">
+      <source src="quintooos - Starwars The Imperial March Darth Vaders Theme - Star Wars - The Empire Strikes Back Original Soundtrack -.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
   </body>
 </html>
