--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animations.css">
   </head>
   <body class="new-game-body">
-    <div class="welcome-box">
+    <div class="welcome-box pulse" >
       <h1 class="menu-header">Mem<span class="header-icon">b</span>ry</h1>
       <h2 class="new-game-message">New Game</h2>
       <a class="menu-button" href="easy.html">Easy</a>
